<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/nav_header">





    <item android:title="@string/user_preferences">
        <menu>


            <item
                android:id="@+id/nav_edit_profile"
                android:title="@string/edit_profile"
                android:icon="@drawable/ic_baseline_settings_24" />
            <item
                android:id="@+id/nav_changepass"
                android:title="@string/change_password"
                android:icon="@drawable/ic_baseline_settings_24" />
            <item
                android:id="@+id/nav_myPacks"
                android:title="@string/My_Packs"
                android:icon="@drawable/ic_baseline_settings_24" />
            <item
                android:id="@+id/nav_MyCases"
                android:title="@string/My_Cases"
                android:icon="@drawable/ic_baseline_settings_24" />
            <item
                android:id="@+id/nav_MyAppointment"
                android:title="@string/My_Appointement"
                android:icon="@drawable/ic_baseline_settings_24" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_baseline_logout_24"/>
            <item
                android:id="@+id/nav_delete_profile"
                android:title="@string/delete_my_account"
                android:icon="@drawable/ic_baseline_delete_24" />
        </menu>
    </item>

</menu>

